--- a/paper-crown/item_brief.html
+++ b/paper-crown/item_brief.html
@@ -86,9 +86,9 @@
                     <form action="#" method="post">
                         <ul class="search_field">
                             <li>
-                                <lable>Search : </lable>
+                                <label>Search : </label>
                                 <input type="text" name="search" class="search" placeholder="Book Title/ Author name">
-                                <input style="float: right; margin-left: -20%;" class="buttons white" type="buttons" value="Search">
+                                <input style="float: right; margin-left: -20%;" class="buttons white" type="button" value="Search">
                             </li>
                         </ul>
                     </form>
@@ -98,12 +98,12 @@
                     <p><img src="images/back.png" alt="Back Image"><a href="search_result.html">Back to Search Result</a></p>
                 </div><br><br>
                 
-                <div id="item_brief">
-                    <div id="book_image">
+                <div class="item_brief">
+                    <div class="book_image">
                         <img src="images/book_image_1.png" alt="Book Image">
                     </div>
-                    <div id="book_info">
-                        <div id="seller_details" style="display: block; margin-left: -36%; margin-top: 6%; background-color: #fdfdfb;">
+                    <div class="book_info">
+                        <div class="seller_details" style="display: block; margin-left: -36%; margin-top: 6%; background-color: #fdfdfb;">
                             <p>Prefered Contact Method : <br><span style="font-family:'source_sans_proregular'">email Only</span></p>
                             <p>Reply by email : <br><a href="#"><span style="color:#809634; font-family:'source_sans_proregular'" >4rs-ps-123@contact.papercrown.in</span></a></p>
                             <p>Webmail Links : <br>
@@ -115,7 +115,7 @@
                             </p>
                         </div>
                     </div>
-                    <div id="book_details" style="margin-top: -3%;">
+                    <div class="book_details" style="margin-top: -3%;">
                         <p class="title">The Complete Reference - Java2 </p>
                         <p>Author :  <span style="color: #809634;">Herbert</span></p>
                         <p>Language : English</p>
@@ -127,7 +127,7 @@
                         <p style="font-size: 18px; font-family: source_sans_probold; color: #555555; margin-top: 30px;">Price : <span style="color: #809634;">2300rs</span></p>
                     </div>
                 </div>
-                <div id="book_description">
+                <div class="book_description">
                     <h4>More Details About :- The Complete Reference - Java2</h4>
                     <p>
                         Java is a widely used language in the computer industry. Its importance and influence is strongly felt as it's still the first and best choice when it comes to
